--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -1,53 +1,80 @@
 \section{Introduction}
-The paradigm of \emph{reduction-based security}---sometimes also referred to as \emph{provable security}---is the state-of-the-art method of understanding and confirming the security of cryptographic constructions. Concretely, a reduction proof reduces the security of a cryptographic construction (in a model) to the security of the underlying building blocks (in a model). While writing reductions, arguing about their soundness and verifying one's own (or someone else's) proof is relatively easy in some contexts, it might get out of hand when constructions become complex. Important methods for taming the complexity of security proofs and increasing their precision are \emph{game-hopping}~\cite{EPRINT:Shoup04}, \emph{code-based} arguments~\cite{EC:BelRog06} as well as composition methodologies such as Universal Composability~\cite{FOCS:Canetti01} and Constructive Cryptography~\cite{FC:Maurer10}.
+The paradigm of \emph{reduction-based security}, a.k.a. \emph{provable security}, is the state-of-the-art method of understanding and confirming the security of cryptographic constructions. Concretely, a reduction proof reduces the security of a cryptographic construction (in a model) to the security of the underlying building blocks (in a model). Writing reductions, arguing about their soundness and verifying one's own (or someone else's) proof is relatively easy in some contexts, but it can get out of hand when constructions become complex. Thus, taming the complexity of security proofs and increasing their precision is an active research direction, including, e.g., \emph{game-hopping}~\cite{EPRINT:Shoup04}, \emph{code-based} arguments~\cite{EC:BelRog06} as well as composition methodologies such as Universal Composability~\cite{FOCS:Canetti01} and Constructive Cryptography~\cite{FC:Maurer10}.
 
-However, studying protocols such as Transport Layer Security (TLS~\cite{TLS13})
+Nevertheless, studying protocols such as Transport Layer Security (TLS~\cite{TLS13})
 and Messaging Layer Security (MLS~\cite{MLS}) \emph{as they are} 
 %(without simplifications and abstractions) 
-remains nevertheless difficult, since either
-standard consists of over 100 pages which makes the protocols unwieldy for analysis without simplifications. Similarly, other real-life systems
-tend to combine multiple cryptographic components in complex dependencyies,
+remains difficult, since their description exceeds 100 pages which makes the protocols unwieldy for analysis without simplifications. Similarly, other real-life systems
+tend to combine multiple cryptographic components in complex dependencies,
 see, e.g., remote attestation mechanisms~\cite{https://arxiv.org/pdf/2102.08804.pdf,https://en.wikipedia.org/wiki/Trusted_Computing}, ... or ... .
 
-The challenge when analyzing any of the aforementioned cases is three-fold:
-(1) The description of a protocol itself exceeds the bounds of a research
+The challenge when analyzing complex protocols is three-fold:
+\begin{description}
+\item[(1) Large protocol description.] The description of a protocol itself exceeds the bounds of a research
 article.
-(2) Parts of the protocols are referred to multiple times in an analysis
+\item[(2) Consistent code-base.] Parts of the protocols are referred to multiple times in an analysis
 and maintaining a consistent version of a complex protocol throughout the 
 analysis is difficult.
-(3) Verifying the reductions is tremendously challenging due to the complexity
-of the protocol.
+\item[(3) Large reduction description.] Describing reductions entirely exceeds the bounds of a research article 
+since they typically emulate most of the protocol.
+\item[(4) Verifying reductions.] Verifying reductions is tremendously challenging due to the complexity
+of both the reduction and the protocol.
+\end{description}
+
 
 Item (1) and (2) can be mitigated by describing the protocol
 modularly and maintaining a single code-base for the protocol
 whose components are imported into the analysis whenever needed.
-However, typically, an important component of protocol analysis is to
-re-write a protocol in a functionally equivalent way, that is easier
-to analyze. Thus, we need to prove functional equivalence between 
-large protocol components. Similarly, for reductions, we need to
-prove that a reduction emulates a high-level game correctly while
-interacting with a low-level game that it tries to win. These proofs, too,
-are functional equivalence proofs for complex objects.
+However, typically, an important component of protocol analysis 
+is to re-write a protocol (and the game around it) in a 
+functionally equivalent way that is easier
+to analyze (cf. Bellare-Rogaway code-based
+game playing~\cite{EC:BelRog06}).
+% or matches the shape of the reduction---in a way, 
+Similarly, writing a reduction typically includes re-writing the protocol 
+except for a small component which, instead of being locally evaluated, 
+is forwarded to an oracle by the reduction. Establishing (perfect) soundness of 
+a reduction is then, again, a proof of functional equivalence\footnote{Large 
+real-life protocols typically only employ straightline reductions. The 
+above proof outline does not apply to, e.g., rewinding, but it would 
+allow, say, programming a random oracle. Also note that proving functional equivalence 
+up to statistical difference can be avoided by first making a game-hop
+bounded by a statistical difference.}. Thus, protocol analysis regularly
+requires us to prove functional equivalence between different protocol descriptions,
+reductions and games.
+% Thus, we need to prove functional equivalence between 
+%large protocol components. Similarly, for reductions, we need to
+%prove that a reduction emulates a high-level game correctly while
+%interacting with a low-level game that it tries to win. These proofs, too,
+%are functional equivalence proofs for complex objects.
 
-\paragraph{Verifying Code-Equivalence Proofs.}
-Indeed, the core component and difficulty of the pioneering formal
+\paragraph{Verifying Code-Equivalence.}
+Indeed, the core component of the pioneering formal
 verification tools CertiCrypt~\cite{X} and EasyCrypt~\cite{X} for 
 cryptographic reductions are functional equivalence proofs. Since functional 
 equivalence is coNP-complete\footnote{An input $x$ such that 
 $f(x)\neq g(x)$ shows that $f$ and $g$ are not code-equivalent.} and 
 for randomized programs even higher up the polynomial hierarchy\footnote{We need to prove that the \emph{distributions} $f(x)$ and $g(x)$ are identical.}, 
-CertiCrypt and EasyCrypt do not verify functional equivalences automatically,
-but rather require the user to write a proof of functional equivalence
-consisting of small, detailed steps. As an example, the EasyCrypt formalization
-of a proof for Yao's garbled circuits shows that after polynomially mang game-hops, the garbling can be computed without knowing the input and while only knowing the output, as required by security of secure multi-party computation. This code equivalence proof between two versions of the garbling, one with and one without
+CertiCrypt and EasyCrypt do not verify functional equivalences automatically.
+Instead, functional equivalence is proven interactively: The user writes
+a proof consisting of small, detailed steps which the tool verifies.
+%but rather require the user to write a proof of functional equivalence
+%consisting of small, detailed steps. 
+As an example, the EasyCrypt formalization
+of a proof for Yao's garbled circuits~\cite{X} shows that after polynomially many game-hops, the garbling can be computed without knowing the input and while only knowing the output of the circuit evaluation, thus establishing the desired goal that a garbled circuit does not leak any information beyond its output value (which can
+always be trivially derived, see~\cite{X} for more discussion). This code equivalence proof between two versions of the garbling, one with and one without
 knowing the input, consists of ... lines of code (~\cite[page x]{}). EasyCrypt,
  thus, indeed enables us to verify complex code equivalence proofs.
 
 \paragraph{Proving Code-Equivalence Proofs.}
 The aforementioned example of Yao's garbling scheme illustrates that current
-computer-verified proofs provide higher assurance, but don't necessarily
-help us address the problem of navigating too complex protocols,
-since even apparently simple steps require significant additional work
+computer-verified proofs provide higher assurance, but do not reduce the
+workload in analyzing a complex protocol, but instead
+%
+%don't necessarily
+%help us address the problem of navigating too complex protocols,
+%since even apparently simple steps 
+require significant additional work
 beyond the level required by pen-and-paper proofs. 
 
 Thus, a natural question is whether we can not only \emph{verify} but
@@ -57,7 +84,140 @@ However, SMT-solvers such as Z3~\cite{X} and CVC4~\cite{X} excel in
 solving structured, practical instances of NP-complete problems, so it
 seems worth investigating whether program equivalence as it emerges in
 the context of cryptographic reductions could be solvable by an off-the-shelf
-SMT-solver.
+SMT-solver. %Jumping ahead, in this article, we give evidence that proving
+%code-equivalences can be significantly automatized, see Section~\ref{X}.
+
+\paragraph{Managing code and incremental changes.}
+Returning to item (1)-(3) above, proofs for large protocols require, in fact,
+a large amount of code which needs to be maintained consistently: In terms of
+basic objects, there are the protocol, the game describing its security as well
+ as the games describing the underlying assumptions. Furthermore, a game-hopping
+proof typically requires describing hybrid games, each of them with an inlined
+version of the protocol where parts of the component might have been replaced
+by idealized versions, e.g., a truly random function instead of a pseudorandom function (PRF). Additionally, each game hop comes with the description of a reduction.
+
+The result of (successful) proof development is an article where all of the
+above are consistent and where equivalent descriptions of a game have
+been proven equivalent and reductions have been proven to be sound.
+However, the \emph{development phase} proceeds via many stages where
+we prove statements about games which later turn out not useful or
+which have small errors and inconsistencies that we correct later.
+
+When considering code modifications to correct errors, these changes do not
+propagate automatically---in fact, we need to backtrack which pieces
+of code are affected, which code-equivalence statements fail now etc..
+Under the assumption that off-the-shelf SMT solvers can verify
+code-equivalence statements and under the assumption that we have
+made all reductions explicit in some formal language, we can, at 
+any point of time, ask an SMT solver to (re-)prove all statements and thus see which
+statements are affected by a modification. However, since most proofs
+of real-life protocols consists of many game-hops, we usually only
+specify the hybrid games in pseudocode, but not the reductions, and
+writing the reductions seems undesirable overhead, even if in return, we
+get the benefit of automated verification and continuous integration.
+
+%\paragraph{Explicit reductions.}
+%When parts of the protocol or some of the hybrid games need to be modified
+%at a late point in the proof development, we need to manually backtrack
+%which parts of the code equivalence statements are affected, which other
+%hybrid games need to be modified consistently etc.. With SMT-solvers in mind, it %seems appealing to explore \emph{automatically} which parts of a proof are %
+%affected by small, local modification.
+
+%While, in principle, one could maintain the code of protocols, games, hybrid
+%games, reductions and assumption games in software and check which proofs are
+%affected (assuming that code-equivalences can be delegate to SMT-solvers) by
+%a local change, this practice seems very far from current hand-written
+%real-life protocol analysis. Namely, those usually do not give their reductions
+%explicitly, since reductions, in essence, emulate the protocol except for one
+%small component whose executions are delegated to an oracle by the reduction.
+%Therefore, the description of hybrid games usually only contains this modification
+%and the reduction is omitted (TODO: put some explicit references here). Thus,
+%writing all of these hybrid games and reductions explicitly in their entirety is
+%simply not appealing, even if tool-support would help with continuous integration. %(TODO: add some laudable examples such as BHR and the original BR paper as well as others).
+
+\paragraph{State-separating proofs.}
+An exception to the practice of incomplete game and reduction descriptions for
+real-life protocol analysis is the state-separating proof methodology (SSP),
+introduced by Brzuska, Delignat-Lavaud, Fournet, Kohbrok and Kohlweiss (BDFKK~\cite{X}). SSPs suggest to write code of games and protocols modularly in (stateful) packages which call one another via oracles but cannot access each others state other than
+via oracle calls (whence their name). 
+
+Modular code writing and code re-use has already been suggested in Bellare and Rogaway's original work~\cite{X} (TODO: check that this is true.) and been practiced, e.g., by BHR~\cite{X}, where TODO: example.
+The SSP methodology (cf.~\cite{X,Y,Z}) develops this idea systematically further and ties it in closely with \emph{compositional} aspects. Concretely, an SSP package typically consists of code and state that is \emph{shared} between multiple cryptographic primitives and/or their games. Subsequently, we can specify reductions precisely in pseudo-code \emph{without} writing any new code, simply by re-using existing packages and composing them into a call-graph. Indeed, all existing works on SSPs make use of this feature~\cite{blankedcite}.
+
+%For example, (the ideal version of) a key exchange security game has code that samples a uniformly random key, and a symmetric-key-based secure channel security game also samples a uniformly random key. Separating out keys into their separate package $\M{KEYS}$ allows composition
+
+%Thus, we can specify the composition of
+%a key exchange protocol and a secure channel by have a key exchange package which
+%makes write calls to a $\M{KEYS}$
+
+%Separating out this $\M{KEYS}$ package into its own package
+
+% Concretely, the SSP methodology separates strictly between \emph{code-equivalence statements} and 
+%\emph{reduction statements}. A code-equivalence statement turns a game into a functionally equivalent game that is more suitable for a reduction step. A reduction, in turn, is merely defined by a \emph{cut in a graph}, where the cut divides a big game (defined by a call graph of packages) into the (graph of) packages whose code defines the game of the assumption on the one side of the cut, and the (graph of) packages whose code defines the reduction on the other side of the cut.
+
+%Due to code-reuse and strict separation between reduction and code equivalence steps, pen-and-paper proofs that use the SSP 
+Thus, SSPs come with a high level of precision and
+are pre-destined for formalization, automatization and,
+all in all, for using tools that not only \emph{verify}
+proofs, but actually support a tool-based proof development process
+that \emph{less} work than its pen-and-paper counterpart.
+
+Missing: Discussion that doing SSPs is actually kinda hard
+and having tool support will make it bearable. Where could this
+fit into the flow?
+
+
+
+
+% for formalization and hence, SSPs are the
+%first pen-and-paper reduction proof methodology in cryptography (TODO: 
+%is that too much?) that can expected to require \emph{less} work with
+%tool support than any other reduction methodology developed so far.
+
+%In fact, in the context of SSPs, Halevi's 20-years-old dream vision~\cite{X} 
+%of delegating \emph{mundane} proof steps to a computer seems within reach.
+
+\paragraph{Our contribution.} We present SSBee, a tool that does all the things
+we said above would be great. It maintains code for SSPs, checks code-equivalences
+semi-automatically and provides continuous integration support.
+
+On a technical level, we support all sorts of things in code, including for loops
+and poly many hybrids.
+
+On a user interface level, we can export to LaTeX and proof viewer, both graphs and packages which might make it easy to communicate what one proved in a paper but
+deferring the (consistent) things to the prover.
+
+
+%to support the development
+%of proofs in SSP-style.
+
+
+% as well as (partial) automatization of code-equivalence
+%proofs via SMT-solvers.
+
+
+
+
+%other works, where to go from here
+%---in fact, they have been formalized both in EasyCrypt~\cite{X}
+%and Coq~\cite{X}.
+
+%The code-reuse allows to define new games and reductions precisely, and
+%verifying cuts in graphs 
+
+
+
+
+
+
+TODO:
+- Mention that SSPs reduce code-equivalences.
+- Mention that EasyCrypt does distributions, nut 
+- using SMT-solver for hybrid indices, um zu schauen dass sie bijektiv
+
+
+
+
 
 === stopped here, somehow, the flow broke ===
 
