--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -60,7 +60,7 @@ knowing the input, consists of ... lines of code in EasyCrypt (~\cite[page x]{X}
 %EasyCrypt,
 % thus, indeed enables us to verify complex code equivalence proofs.
 
-In turn, in the pen-and-paper proof of Yao's garbled circuits by Lindell and Pinkas, the analogous conceptual argument consists of 10 lines of text (\cite[page 23]{x});
+In turn, in the pen-and-paper proof of Yao's garbled circuits by Lindell and Pinkas, the analogous conceptual argument consists of 10 lines of text (\cite[page 23]{x}, which is the ePrint version of~\cite{X});
 and in the pen-and-paper proof of Yao's garbling scheme by Bellare, Hoang and Rogaway, ...(\cite[page ..]{X}).
 
 \paragraph{Proving Code-Equivalence Proofs.}
