--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -60,8 +60,7 @@ knowing the input, consists of ... lines of code in EasyCrypt (~\cite[page x]{X}
 %EasyCrypt,
 % thus, indeed enables us to verify complex code equivalence proofs.
 
-In turn, in the pen-and-paper proof of Yao's garbled circuits by Lindell and Pinkas, the analogous conceptual argument consists of 10 lines of text (\cite[page 23]{x}, which is the ePrint version of~\cite{X});
-and in the pen-and-paper proof of Yao's garbling scheme by Bellare, Hoang and Rogaway, ...(\cite[page ..]{X}).
+In turn, in the pen-and-paper proof of Yao's garbled circuits by Lindell and Pinkas, the analogous conceptual argument consists of 10 lines of text (\cite[page 23]{x}, which is the ePrint version of~\cite{X}); and in the pen-and-paper proof of Yao's garbling scheme by Bellare, Hoang and Rogaway, ...(\cite[page ..]{X}). Both code equivalence proofs consists of a conceptual high-level argument about distributions of keys, while the EasyCrypt analysis (a) additionally makes explicit which randomness for key sampling in one game corresponds to randomness for key sampling in the other game and (b) ... .
 
 \paragraph{Proving Code-Equivalence Proofs.}
 The aforementioned example of Yao's garbling scheme illustrates that current
@@ -72,7 +71,7 @@ workload in analyzing a complex protocol, but instead
 %help us address the problem of navigating too complex protocols,
 %since even apparently simple steps 
 require significant additional work
-beyond the level required by pen-and-paper proofs. 
+beyond the amount of detail typically worked out in pen-and-paper proofs. 
 
 Thus, a natural question is whether we can not only \emph{verify} but
 perhaps also \emph{automatically} prove code equivalences. As mentioned
